[package]
name = "gossip_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
data-encoding = "2.8.0"
futures = "0.3.31"
iroh = "0.33.0"
iroh-gossip = "0.33.0"
libp2p ={version="0.55.0", features = [ "tokio", "dns", "kad", "mdns", "noise", "macros", "tcp", "yamux"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = {version="1.43.0", features=["full"]}
tracing-subscriber = {version = "0.3.19",  features = ["env-filter"] }
