[package]
name = "peer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
data-encoding = "2.8.0"
futures = "0.3.31"
futures-timer = "3.0.3"
libp2p ={version="0.55.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = {version="1.43.0", features=["full"]}
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19",  features = ["env-filter"] }
dotenv = "0.15.0"

[[bin]]
name = "peer"
path = "src/main.rs"
